@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-14T02:19:23Z",
+  "timestamp" : "2022-06-14T08:29:00Z",
   "count_outdated" : 183,
   "uniques_outdated" : 82,
   "count" : 208,
-  "uniques" : 97,
+  "uniques" : 98,
   "clones" : [
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
